[tool.poetry]
name = "exercices"
version = "1.0"
description = ""
authors = ["Janosch Hoefer"]

[tool.poetry.scripts]
main = "src.exercices.main:main"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.15.3"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
ipywidgets = "^8.0.2"
ipympl = "^0.9.2"
sympy = "^1.11.1"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
